Localyze for test

--- a/keys.htm
+++ b/keys.htm
@@ -7,10 +7,12 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="author" content="James Fenn">
+  <link rel="canonical" href="https://terpstra.mahaananda.jp/keys.htm" />
 
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="skeleton.css">
 	<link rel="stylesheet" href="terpstra-style.css">
+  <link rel="shortcut icon" href="ico/favicon.ico">
     
     <link rel="manifest" href="manifest.webmanifest"> <!-- added to enable Android Firefox users to add the web app to the home screen -->
 
